feat(admin): integrate user CRUD validation and RBAC