@@ -8,9 +8,9 @@ import swp391.group6.model.User;
 import swp391.group6.repository.RoleRepository;
 import swp391.group6.repository.UserRepository;
 
+import java.sql.Timestamp;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class UserService {
@@ -20,61 +20,73 @@ public class UserService {
 
     private final UserRepository userRepository;
     private final RoleRepository roleRepository;
-    private final BCryptPasswordEncoder passwordEncoder;
+    private final BCryptPasswordEncoder passwordEncoder = new BCryptPasswordEncoder();
 
     public UserService(UserRepository userRepository, RoleRepository roleRepository) {
         this.userRepository = userRepository;
         this.roleRepository = roleRepository;
-        this.passwordEncoder = new BCryptPasswordEncoder();
     }
 
     public List<UserDTO> getAllUsers() {
         return userRepository.findAll().stream()
+                .filter(user -> !hasRole(user, PROTECTED_ROLE_NAME))
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Optional<UserDTO> getUserById(long id) {
         return userRepository.findById(id)
+                .filter(user -> !hasRole(user, PROTECTED_ROLE_NAME))
                 .map(this::convertToDTO);
     }
 
     public UserDTO createUser(UserDTO userDTO) {
         validateUserForCreate(userDTO);
-        User user = convertToEntity(userDTO);
-        user.setPassword(passwordEncoder.encode(userDTO.getPassword()));
-        User savedUser = userRepository.save(user);
-        return convertToDTO(savedUser);
-    }
 
-    private void validateUserForCreate(UserDTO userDTO) {
-        if (userDTO == null) {
-            throw new IllegalArgumentException("User data is required");
+        if (userRepository.findByEmail(userDTO.getEmail().trim()).isPresent()) {
+            throw new IllegalArgumentException("Email already exists");
         }
-        if (userDTO.getEmail() == null || userDTO.getEmail().isBlank()) {
-            throw new IllegalArgumentException("Email is required");
-        }
-        if (userDTO.getPassword() == null || userDTO.getPassword().isBlank()) {
-            throw new IllegalArgumentException("Password is required");
-        }
+
+        User user = new User();
+        user.setEmail(userDTO.getEmail().trim());
+        user.setPassword(passwordEncoder.encode(userDTO.getPassword()));
+        user.setFullName(userDTO.getFullName().trim());
+        user.setPhone(normalizePhone(userDTO.getPhone()));
+        user.setRole(resolveRole(userDTO.getRoleName()));
+        user.setStatus(userDTO.getStatus() == null || userDTO.getStatus());
+        user.setCreatedAt(new Timestamp(System.currentTimeMillis()));
+        return convertToDTO(userRepository.save(user));
     }
 
     public UserDTO updateUser(long id, UserDTO userDTO) {
-        Optional<User> existingUser = userRepository.findById(id);
-        if (existingUser.isPresent()) {
-            User user = existingUser.get();
-            if (userDTO.getEmail() != null) user.setEmail(userDTO.getEmail());
-            if (userDTO.getPassword() != null) user.setPassword(passwordEncoder.encode(userDTO.getPassword()));
-            if (userDTO.getFullName() != null) user.setFullName(userDTO.getFullName());
-            if (userDTO.getPhone() != null) user.setPhone(userDTO.getPhone());
-
-            // Cập nhật dùng isStatus() cho kiểu boolean nguyên thủy
-            user.setStatus(userDTO.isStatus());
-
-            User updatedUser = userRepository.save(user);
-            return convertToDTO(updatedUser);
+        if (userDTO == null) {
+            throw new IllegalArgumentException("User data is required");
         }
-        return null;
+
+        User user = userRepository.findById(id).orElse(null);
+        if (user == null || hasRole(user, PROTECTED_ROLE_NAME)) {
+            return null;
+        }
+
+        if (userDTO.getFullName() != null) {
+            validateFullName(userDTO.getFullName());
+            user.setFullName(userDTO.getFullName().trim());
+        }
+        if (userDTO.getPhone() != null) {
+            user.setPhone(normalizePhone(userDTO.getPhone()));
+        }
+        if (userDTO.getPassword() != null && !userDTO.getPassword().isBlank()) {
+            validatePassword(userDTO.getPassword());
+            user.setPassword(passwordEncoder.encode(userDTO.getPassword()));
+        }
+        if (userDTO.getRoleName() != null && !userDTO.getRoleName().isBlank()) {
+            user.setRole(resolveRole(userDTO.getRoleName()));
+        }
+        if (userDTO.getStatus() != null) {
+            user.setStatus(userDTO.getStatus());
+        }
+
+        return convertToDTO(userRepository.save(user));
     }
 
     public UserDTO updateProfile(long id, UserDTO userDTO) {
@@ -87,22 +99,24 @@ public class UserService {
             return null;
         }
 
-        if (userDTO.getFullName() != null && !userDTO.getFullName().isBlank()) {
+        if (userDTO.getFullName() != null) {
+            validateFullName(userDTO.getFullName());
             user.setFullName(userDTO.getFullName().trim());
         }
         if (userDTO.getPhone() != null) {
-            user.setPhone(userDTO.getPhone().trim());
+            user.setPhone(normalizePhone(userDTO.getPhone()));
         }
 
         return convertToDTO(userRepository.save(user));
     }
 
     public boolean deleteUser(long id) {
-        if (userRepository.existsById(id)) {
-            userRepository.deleteById(id);
-            return true;
+        Optional<User> existingUser = userRepository.findById(id);
+        if (existingUser.isEmpty() || hasRole(existingUser.get(), PROTECTED_ROLE_NAME)) {
+            return false;
         }
-        return false;
+        userRepository.delete(existingUser.get());
+        return true;
     }
 
     public UserDTO banUser(long id) {
@@ -113,72 +127,89 @@ public class UserService {
         return updateUserStatus(id, true);
     }
 
-    private UserDTO updateUserStatus(long id, boolean status) {
-        Optional<User> existingUser = userRepository.findById(id);
-        if (existingUser.isEmpty() || hasRole(existingUser.get(), PROTECTED_ROLE_NAME)) {
-            return null;
-        }
-
-        User user = existingUser.get();
-        user.setStatus(status);
-        return convertToDTO(userRepository.save(user));
-    }
-
     public List<UserDTO> searchUsers(String query) {
         return userRepository.search(query).stream()
+                .filter(user -> !hasRole(user, PROTECTED_ROLE_NAME))
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Optional<UserDTO> getUserByEmail(String email) {
         return userRepository.findByEmail(email)
+                .filter(user -> !hasRole(user, PROTECTED_ROLE_NAME))
                 .map(this::convertToDTO);
     }
 
-    // Allow users to view their own profile regardless of role protection
     public Optional<UserDTO> getUserByEmailUnprotected(String email) {
-        return userRepository.findByEmail(email)
-                .map(this::convertToDTO);
+        return userRepository.findByEmail(email).map(this::convertToDTO);
+    }
+
+    private UserDTO updateUserStatus(long id, boolean status) {
+        User user = userRepository.findById(id).orElse(null);
+        if (user == null || hasRole(user, PROTECTED_ROLE_NAME)) {
+            return null;
+        }
+        user.setStatus(status);
+        return convertToDTO(userRepository.save(user));
+    }
+
+    private Role resolveRole(String roleName) {
+        String requestedRole = roleName == null || roleName.isBlank()
+                ? DEFAULT_ROLE_NAME
+                : roleName.trim();
+        if (PROTECTED_ROLE_NAME.equalsIgnoreCase(requestedRole)) {
+            throw new IllegalArgumentException("System admin role cannot be assigned");
+        }
+        return roleRepository.findByNameIgnoreCase(requestedRole)
+                .orElseThrow(() -> new IllegalArgumentException("Role not found"));
+    }
+
+    private void validateUserForCreate(UserDTO userDTO) {
+        if (userDTO == null) {
+            throw new IllegalArgumentException("User data is required");
+        }
+        if (userDTO.getEmail() == null
+                || !userDTO.getEmail().trim().matches("^[^\\s@]+@[^\\s@]+\\.[^\\s@]+$")) {
+            throw new IllegalArgumentException("Valid email is required");
+        }
+        validateFullName(userDTO.getFullName());
+        validatePassword(userDTO.getPassword());
+        normalizePhone(userDTO.getPhone());
+    }
+
+    private void validateFullName(String fullName) {
+        if (fullName == null || fullName.isBlank()) {
+            throw new IllegalArgumentException("Full name is required");
+        }
+    }
+
+    private void validatePassword(String password) {
+        if (password == null || password.length() < 6) {
+            throw new IllegalArgumentException("Password must be at least 6 characters");
+        }
+    }
+
+    private String normalizePhone(String phone) {
+        if (phone == null || phone.isBlank()) {
+            return null;
+        }
+        String normalized = phone.replaceAll("\\s+", "");
+        if (!normalized.matches("^0\\d{8,10}$")) {
+            throw new IllegalArgumentException("Invalid phone number");
+        }
+        return normalized;
     }
 
     private UserDTO convertToDTO(User user) {
         UserDTO dto = new UserDTO();
         dto.setId(user.getId());
         dto.setEmail(user.getEmail());
-        dto.setPassword(user.getPassword());
         dto.setFullName(user.getFullName());
         dto.setPhone(user.getPhone());
-        if (user.getRole() != null) {
-            dto.setRoleName(user.getRole().getName());
-        }
-
+        dto.setRoleName(user.getRole() == null ? null : user.getRole().getName());
         dto.setStatus(user.isStatus());
-
-        if (user.getCreatedAt() != null) {
-            dto.setCreatedAt(user.getCreatedAt().toString());
-        }
+        dto.setCreatedAt(user.getCreatedAt() == null ? null : user.getCreatedAt().toString());
         return dto;
-    }
-
-    private User convertToEntity(UserDTO dto) {
-        User user = new User();
-        if (dto.getId() != null) user.setId(dto.getId());
-        user.setEmail(dto.getEmail());
-        user.setPassword(dto.getPassword());
-        user.setFullName(dto.getFullName());
-        user.setPhone(dto.getPhone());
-        user.setStatus(dto.isStatus());
-        user.setCreatedAt(new java.sql.Timestamp(System.currentTimeMillis()));
-
-        String roleName = (dto.getRoleName() != null && !dto.getRoleName().isBlank()) ? dto.getRoleName() : DEFAULT_ROLE_NAME;
-        Role role = roleRepository.findByName(roleName).orElse(null);
-        if (role == null) {
-            role = new Role();
-            role.setId(1L);
-        }
-        user.setRole(role);
-
-        return user;
     }
 
     private boolean hasRole(User user, String roleName) {
